Fixing nav button bug
Fixing bug where nav button didn’t look correct on mobile

--- a/assets/css/2-base/_navigation.scss
+++ b/assets/css/2-base/_navigation.scss
@@ -78,12 +78,13 @@ header {
       background-color: $blue;
       content: '';
       position: absolute;
-      &:before {
-         top: -12px;
-      }
-      &:after {
-         bottom: -12px;
-      }
+
+   }
+   span:before {
+      top: -12px;
+   }
+   span:after {
+      bottom: -12px;
    }
    &.cross {
       span, span:before, span:after {
